--- a/app.json
+++ b/app.json
@@ -1,12 +1,11 @@
 {
-    "name": "⎝🛡️ ALPHA 🛡️⎠ WhatsApp User Bot v4.0.0",
-    "description": "World best Sinhala/English WhatsApp Button Bot Developer Achi Fernando Enjoy Our Bot",
-    "logo": "https://telegra.ph/file/cd6032c65c27e0510ddad.jpg",
+    "name": "DARK MAX V3.5",
+    "description": "New MD Realise",
     "keywords": ["Achi Bro lk | PG", "ALPHA"],
     "stack": "container",
     "env": {
-      "ALPHA_SESSION": {
-            "description": "Paste your QR session that you got from https://replit.com/@CTBOT/Alpha-Qr?v=1. ඇල්ෆා qr කේතය යොදන්න.",
+      "DARK MAX_SESSION": {
+            "description": "Paste your QR session that you got from",
             "required": true
         },
         "BUTTON_CMD": {
@@ -15,7 +14,7 @@
         },
           "MENU_CMD": {
             "description": "TYPE YOUR MENU COMMAND.ඔබෙ මෙනු එක ගැනිම සදහා අවශ්‍ය නම් විදානයක් සකසන්න.",
-            "value":"alpha"
+            "value":"menu"
         },      
         "ALIVE_LOGO": {
             "description": "If you do not want to change Alive Logo put here to your image direct link or, type default. ඔබගෙ alive logo එක සාදහා ඔබෙ logo එකක් යේදිමට අවශ්‍ය නම් මෙහි link එක යොදන්න.",
@@ -24,19 +23,19 @@
         },
         "SONG_UPLOAD": {
             "description": "SONG UPLOAFING MESSAGE අවශ්‍ය නම් මෙය වෙනස් කරගන්න.",
-            "value": "🖲️.  *ඔබ සෙවූ ගීතය ඔබ වෙත එවමින් ඇත....*"
+            "value": "# *HELLO...I'M UPLOADING YOUR SONG*"
         },
         "SONG_DOWNLOAD": {
             "description": "SONG DOWNLOADING MESSAGE අවශ්‍ය නම් මෙය වෙනස් කරගන්න.",
-            "value": "🖲️.  *ඔබ සෙවූ ගීතය බාගත කරමින් ඇත....*"
+            "value": "# *HELLO...I'M DOWNLOADING YOUR SONG*"
         },
         "VIDEO_UPLOAD": {
             "description": "VIDEO UPLOADING MESSAGE අවශ්‍ය නම් මෙය වෙනස් කරගන්න.",
-            "value":"🔮.  *ඔබ ඉල්ලූ  විඩීයෝව ඔබ වෙත එවමින් ඇත.*"
+            "value":"# *HELLO...I'M UPLOADING YOUR VIDEO*"
         },
         "VIDEO_DOWNLOAD": {
             "description": "VIDEO DOWNLOADING MESSAGE අවශ්‍ය නම් මෙය වෙනස් කරගන්න.",
-            "value":"🔮.  *ඔබ  ඉල්ලූ විඩීයෝව  බාගත කරමින් ඇත....*"
+            "value":"# *HELLO...I'M DOWNLOADING YOUR VIDEO*" 
         },
         "TIME_ZONE": {
             "description": "YOUR COUNTRY TIME ZONE ලන්කාවෙ අය තියන විදිහට තියන්න..",
@@ -196,7 +195,7 @@
         "CAPTION": {
             "description": "LOGO MAKER CAPTION  මෙහි ඔබගෙ බොට්ගෙ නම යොදන්න. ",
             "required": true,
-            "value": "   ▷ ᴹᴬᴰᴱ 🄱🅈 ⎝🛡️ ALPHA 🛡️⎠│"
+            "value": "*POWERED BY DARK MAX*"
         },
         "COFFEEHOUSE_API_KEY": {
             "description": "Give it up. We give you this. කිසිවක් වෙනස් නොකරන්න. ",
